--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
   #header{
     position: fixed;
     width: 100%;
-    background-color: rgba(0,0,0,.8);
+     background-color: rgba(255, 208, 0, 0.61);
     z-index: 1000;
   }
   .headerchangeStyle{
